Fix: result height overflow on some devices

--- a/src/components/lyricDetailViewer/lyricDetail.css
+++ b/src/components/lyricDetailViewer/lyricDetail.css
@@ -23,7 +23,7 @@
   width: 90%;
   left: 50%;
   transform: translate(-50%, 0);
-  bottom: 0;
+  bottom: 10px;
 }
 
 .controls .actions {
