--- a/src/pages/lyricsApp.css
+++ b/src/pages/lyricsApp.css
@@ -52,7 +52,7 @@
 .result-view,
 .playlist-view {
   position: relative;
-  margin: 50px 5%;
+  margin: 20px;
   width: auto;
   background-color: #f5f5f5ab;
   border-radius: 8px;
@@ -86,6 +86,12 @@
   flex-direction: column;
   height: 100%;
   opacity: 0.9;
+  padding: 10px;
+}
+
+.hint-message img{
+  height: 400px;
+  width: auto;
 }
 
 .hint-message .hint-message-text {
@@ -133,7 +139,8 @@
 @media (min-width: 800px) {
   .result-view,
   .playlist-view {
-    height: 530px;
+    max-height: 530px;
+    min-height: 400px;
   }
   .results {
     max-height: 37vh;
